samples/_failures_safe/1761162512_6ff3cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29e399b8.c: In function ‘main’:
./samples/SAFE/__tmp_29e399b8.c:138:5: error: ‘cleanup’ undeclared (first use in this function)
  138 |     cleanup
      |     ^~~~~~~
./samples/SAFE/__tmp_29e399b8.c:138:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_29e399b8.c:138:12: error: expected ‘;’ at end of input
  138 |     cleanup
      |            ^
      |            ;
./samples/SAFE/__tmp_29e399b8.c:138:5: error: expected declaration or statement at end of input
  138 |     cleanup
      |     ^~~~~~~
